fix overlapping click

--- a/scripts/core/stylesheets/debugger.css
+++ b/scripts/core/stylesheets/debugger.css
@@ -165,6 +165,7 @@
     padding: 5px 10px;
     cursor: pointer;
     display: none;
+    border-radius: 3px;
 }
 
 #debug-mode fieldset fieldset {
@@ -212,10 +213,11 @@
 }
 
 #debug-mode li {
-    padding: 2px;
+    padding: 2px 3px;
     border: 1px solid #fff;
     white-space: nowrap;
     margin-bottom: 1px;
+    border-radius: 3px;
 }
 
 #debug-mode li:hover,
@@ -226,7 +228,7 @@
 
 #debug-mode li.extend:hover {
     background-color: transparent;
-    border: none;
+    border: 1px solid #fff;
 }
 
 #debug-mode li.this {
